--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 actix-cors = "0.7.1"
 actix-web = "4.9.0"
+serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.140"
